# ThalosPrimeLibrary

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  AUTOMATION_QUICK_REF.md  COMPLETION_SUMMARY.md  CONFIG_DUMP.txt  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_SUMMARY.txt  Dockerfile  EMPTY_INIT_FILES.md  FINAL_VALIDATION.sh  FULL_SOURCE_DUMP.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPORTANTfragmentationofinfinitepossibilities.txt  INSTALLATION_GUIDE.md  ISSUE_1_RESOLUTION.md  Makefile  PHASE1_PHASE2_GUIDE.md  PROJECT_FILES.txt  QUICK_DEPLOY.md  QUICK_REFERENCE.md  README.md  README_COMPLETE.md  REPOSITORY_COMPLETION_SUMMARY.md  SERVICE_ENFORCEMENT.md  SERVICE_HANDSHAKE.md  SERVICE_KEEPALIVE.md  TYPE_ANNOTATIONS_FIX_SUMMARY.md  TYPE_SAFETY_COMPLETE.md  Thalos_Prime_Claims_Scaffold.md  Thalos_Prime_Patent_Charter.md  Thalos_Prime_Phase1_Phase2_Execution.md  (+26 more)
.github/: copilot-instructions.md
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yaml  enforce-standards.yml
configs/: __init__.py  config.py
corpus/: doc_001.txt  doc_002.txt  doc_003.txt  doc_004.txt  doc_005.txt
data/: README.md
docs/: architecture.md
infra/docker/: Dockerfile
schemas/: execution_graph.schema.json  hdr.schema.json
scripts/: build_index.py  serve.py
src/: __init__.py  babel_search_expansion.py  constraint_navigator.py  lob_babel_enumerator.py  lob_babel_generator.py  lob_babel_search.py  lob_decoder.py  main.py  peptide_space.py  semantic_parser.py
src/api/: __init__.py
src/control/: __init__.py
src/core/: execution_graph.py
src/data_plane/: __init__.py  dialogue.py
src/lob_shard_manager/: __init__.py  shard.py  shard_manager.py  shard_store.py  utils.py
src/lob_shard_manager/examples/: example_shard_session.py
src/observability/: __init__.py
src/state/: __init__.py
src/thalosprime/: cli.py
src/utils/: __init__.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: test_api.py  test_api_chat.py  test_api_search.py  test_babel_endpoints.py  test_config.py  test_constraint_navigator.py  test_control.py  test_data_plane.py  test_decoder.py  test_enumerator.py  test_execution_graph.py  test_generator.py  test_ingest.py  test_integration.py  test_lob_babel_enumerator.py  test_lob_babel_generator.py  test_lob_babel_search.py  test_lob_decoder.py  test_lob_shard_manager.py  test_main.py  test_package.py  test_peptide_space.py  test_schemas.py  test_semantic_parser.py  test_utils.py  test_validators.py
thalos_prime/: __init__.py  config.py  ingest.py  lob_babel_enumerator.py  lob_babel_generator.py  lob_decoder.py  synthesis.py
thalos_prime/api/: __init__.py  config.py  server.py
thalos_prime/api/routes/: __init__.py  admin.py  chat.py  decode.py  enumerate.py  generate.py  main.py  search.py
thalos_prime/database/: connection.py
thalos_prime/models/: __init__.py  api_models.py  db_models.py
thalos_prime/monitoring/: __init__.py
thalos_prime/remote/: __init__.py
thalos_prime/ui/: __init__.py
thalos_prime/ui/static/css/: animations.css  console.css  matrix.css
thalos_prime/ui/static/js/: api-client.js  console-handler.js  main.js  matrix-background.js  ui-manager.js
thalos_prime/ui/templates/: index.html
thalos_prime/utils/: __init__.py
thalos_prime/workers/: __init__.py
tools/: __init__.py  detect_prohibited_patterns.py  validate_determinism.py  validate_docs.py  validate_lifecycle.py  validate_state.py
